new webstie push

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!-- https://www.wikihow.com/Insert-Spaces-in-HTML usefull for spaces--> 
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-125400271-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -13,138 +12,148 @@
       gtag('config', 'UA-125400271-1');
     </script>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Sabera Talukder</title>
+  <title>Sabera Talukder - Home</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Favicons -->
+  <link href="assets/img/favicon.ico" rel="icon">
+  <link href="assets/img/favicon.ico" rel="apple-touch-icon">
 
-    <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- =======================================================
+  * Template Name: iPortfolio - v3.7.0
+  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
+  * Author: BootstrapMade.com
+  * License: https://bootstrapmade.com/license/
+  ======================================================== -->
 </head>
-<link rel="shortcut icon" href="img/favicon.ico">
 
 <body>
 
-    <div class="brand">Sabera Talukder</div>
-    <div class="address-bar">Neuroengineer | Creator | Researcher <br>
-    <!-- </div>
-    <div> -->
-    <a href="mailto:sabera.j.talukder@gmail.com"><span style="font-size:24pt"><img src="img/email.png"><font color="white"></font></span></a>
-    &nbsp;
-    <a href="https://twitter.com/SaberaTalukder" target="_blank"><span style="font-size:24pt"><img src="img/twitter.png"><font color="white"></font></span></a>
-    &nbsp;
-    <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao" target="_blank"><span style="font-size:20pt"><img src="img/scholar.png"><font color="white"></font></span></a>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
+  <!-- ======= Header ======= -->
+  <header id="header">
+    <div class="d-flex flex-column">
+
+      <div class="profile">
+        <img src="assets/img/sabera_talukder_headshot_2021_square_blue.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" class="img-fluid rounded-circle" style="width:auto; height:200px;">
+        <h1 class="text-light"><a href="index.html">Sabera Talukder</a></h1>
+        <div class="social-links mt-3 text-center">
+         <p style="color:white;"><span class="typed" data-typed-items="Neuroengineer, Creator, Researcher"></span></p>
+        </div>
+
+        <div class="social-links mt-3 text-center">
+          <a href="https://twitter.com/SaberaTalukder" target="_blank" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <a href="mailto:sabera.j.talukder@gmail.com" class="email"><i class="bx bx-envelope"></i></a>
+          <a href="https://scholar.google.com/citations?user=S00bhfIAAAAJ&hl=en&oi=ao" target="_blank" class="scholar"><i class="bx bxs-graduation"></i></a>
+          <a href="Sabera_Talukder_Resume_For_Website_2022.pdf" target="_blank" class="resume"><i class="bx bx-file-blank"></i></a>
+          <a href="https://www.linkedin.com/in/sabera-talukder-69600bb1/" target="_blank" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+        </div>
+      </div>
+
+      <nav id="navbar" class="nav-menu navbar" style="top:-10px;">
+        <ul>
+          <li><a href="research.html"><i class="bx bxs-flask"></i> <span>Research</span></a></li>
+          <li><a href="blog.html"><i class="bx bx-edit"></i> <span>Blog</span></a></li>
+        </ul>
+
+        <a class="twitter-timeline" data-theme="dark" style="top:5px;" data-width="300" data-height="265" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+      </nav><!-- .nav-menu -->
     </div>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Sabera Talukder</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li>
-                        <a href="index.html">Home</a>
-                    </li>
-                    <li>
-                        <a href="projects.html">Projects</a>
-                    </li>
-                    <li>
-                        <a href="blog.html">Blog</a>
-                    </li>
-                    <li>
-                        <a href="honors.html">Honors</a>
-                    </li>
-                    <li>
-                        <a href="SaberaTalukderResume2017.pdf">CV</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
+  </header><!-- End Header -->
 
-    <div class="container">
+  <main id="main">
+  
 
+  <!-- ======= Hero Section ======= -->
+  <!-- <section id="about" class="about"> -->
+  	<div class="row">
+	    <div class="col-lg-7" style="margin-top: 50px; margin-left: 15px;">
+	      <h1>Welcome!</h1>
+	      <p style="font-size: 20px;">
+	      <br>
+	      My name is Sabera Talukder and I am a National Science Foundation Graduate Fellow, <a href="https://neuroscience.caltech.edu/people/sabera-talukder" target="_blank">Chen Graduate Fellow</a>, and PhD candidate at Caltech working with Professor <a href="http://www.yisongyue.com/group.php" target="_blank">Yisong Yue</a>.
+	      <br>
+	      <br>
+	      My research is in the burgeoning field of <a href="https://saberatalukder.com/what_is_neuroengineering.html" target="_blank">neuroengineering</a>, where I combine deep learning and invasive human neural data to create models that generalize across patients.
+		  <br>
+	      <br>
+	      Previously, I was a software engineer at the Chan Zuckerberg Biohub where I led the <a href="https://saberatalukder.com/biohub_neuroengineering_symposium_papers.html" target="_blank">neuroengineering efforts</a>. Before that, I double majored at Stanford University with honors in both <a href="https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry.
+	      <br>
+	      <br>
+	      Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!</p>
+	    </div>
+	    <div class="col-lg-5" style="margin-left: -15px;">
+	    	<img src="assets/img/Sabera_Talukder_chen_institute_caltech_long.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
+	    </div>
+	<!-- </div>
+	<div class="row">
+	<div class="col-lg-12" style="margin-top: 80px; margin-left: 10px; margin-right: 10px;">
+	    	<img src="assets/img/bangladesh copy.jpg" alt="Sabera Talukder at the Annenberg Center for Information Science and Technology at Caltech" style="max-width:100%;max-height:100%;">  
+	    </div>
+	</div> -->
+  <!-- </section> -->
+
+  
+
+  <!-- ======= About<!--  Section ======= -->
+    <!-- <section id="about" class="about">
+      <div class="container">
         <div class="row">
-            <div class="box">
-                <div class="col-lg-12 text-center">
-
-                    <h1 class="text-center" style="padding-top:15px; position: relative;">Welcome!</h1>
-                    <br>
-                    <br>              
-                </div>
-
-                <div class="row">
-                    <div class="box">
-                        <div class="col-sm-4 text-left">
-                            <img src="img/long_headshot_2021_blue.jpg" alt="Sabera_Talukder_Headshot" style="border-radius:3%; width:auto; height:400px; float:right;">
-                        </div>
-
-
-                        <div class="col-sm-4 text-left">
-                            <p style="text-indent: 30px;">My name is Sabera Talukder and I am a National Science Foundation Graduate Fellow, <a href="https://neuroscience.caltech.edu/people/sabera-talukder" target="_blank">Chen Graduate Fellow</a>, and PhD candidate at Caltech working with Professor <a href="http://www.yisongyue.com/group.php" target="_blank">Yisong Yue</a>. My research is in the burgeoning field of <a href="https://saberatalukder.com/what_is_neuroengineering.html" target="_blank">neuroengineering</a>, where I combine deep learning and invasive, human, neural data to create models that generalize across patients. Previously, I was a software engineer at the Chan Zuckerberg Biohub where I led the <a href="https://saberatalukder.com/biohub_neuroengineering_symposium_papers.html" target="_blank">neuroengineering efforts</a>. Before that, I graduated from Stanford with a double major with honors in both <a href="https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry. Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>! </p>
-                        </div>
-
-                        <div class="col-sm-4 text-right">
-                            <a class="twitter-timeline" data-width="400" data-height="350" href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw">Tweets by SaberaTalukder</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+          <div class="col-lg-6 pt-4 pt-lg-0 content">
+            <h3>Welcome!</h3>
+            <p>
+            My name is Sabera Talukder and I am a National Science Foundation Graduate Fellow, <a href="https://neuroscience.caltech.edu/people/sabera-talukder" target="_blank">Chen Graduate Fellow</a>, and PhD candidate at Caltech working with Professor <a href="http://www.yisongyue.com" target="_blank">Yisong Yue</a>. My research is in the burgeoning field of <a href="https://saberatalukder.com/what_is_neuroengineering.html" target="_blank">neuroengineering</a>, where I combine deep learning and invasive, human, neural data to create models that generalize across patients. Previously, I was a software engineer at the Chan Zuckerberg Biohub where I led the <a href="https://saberatalukder.com/biohub_neuroengineering_symposium_papers.html" target="_blank">neuroengineering efforts</a>. Before that, I graduated from Stanford with a double major with honors in both <a href="https://ee-archive.stanford.edu/spotlight/sabera-talukder" target="_blank">electrical engineering</a> and biochemistry. Feel free to reach out if you think we should <a href="https://twitter.com/SaberaTalukder" target="_blank">connect</a>!
+            </p>
+          </div>
+          <div class="col-lg-6" data-aos="fade-left">
+            <img src="assets/img/home_page_test.jpg" class="img-fluid" alt="Sabera Talukder at the Chen Neuroscience Institute at Caltech">
+          </div>
         </div>
 
-                    
-                    <hr class="visible-xs">
+      </div>
+    </section> -->
 
-                    <p><br></p>
-                   
-                </div>
-            </div>
-        </div>
-    </div>
+  </main>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <br>
-                    <a href="https://twitter.com/SaberaTalukder?ref_src=twsrc%5Etfw" class="twitter-follow-button" data-size="large" data-show-screen-name="false" data-show-count="false" target="_blank">Follow @SaberaTalukder</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-                     <a class="twitter-share-button" data-size="large" href="https://twitter.com/intent/tweet?text=@SaberaTalukder" target="_blank">Tweet</a>
-                    <p>Copyright &copy; Sabera Talukder 2022</p>
-                </div>
-            </div>
-        </div>
-    </footer>
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/purecounter/purecounter.js"></script>
+  <script src="assets/vendor/aos/aos.js"></script>
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+  <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
+  <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+  <script src="assets/vendor/typed.js/typed.min.js"></script>
+  <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
+  <script src="assets/vendor/php-email-form/validate.js"></script>
+
+  <!-- Template Main JS File -->
+  <script src="assets/js/main.js"></script>
+
 </body>
 
 </html>
-
