--- a/blog.html
+++ b/blog.html
@@ -140,7 +140,11 @@
               <br> <br>
             </li>
 
-            <!-- <li>
+            <hr style="width:90%; height:4px; margin-left:32px;">
+            <h4 style="margin-left:35px;">The following blog posts are in my old website style. Sorry about that! Working to update!</h4>
+            <hr style="width:90%; height:4px; margin-left:32px;">
+            <br>
+            <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
                   <img src="assets/img/blog_imgs/neuroengineering_companies/neuroengineering_companies_header.png" alt="Sabera Talukder Neuroengineering / Neural Engineering Companies" style="max-width:100%; max-height:100%; border-radius: 10%;">
@@ -162,7 +166,7 @@
               <br> <br>
             </li>
 
-            <li>
+            <!-- <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
                   <img src="assets/img/blog_imgs/chan_zuckerberg_biohub_neuroengineering_symposium/chan_zuckerberg_biohub_neuroengineering_symposium_header.jpg" alt="Sabera Talukder Neuroengineering / Neural Engineering Chan Zuckerberg Biohub Symposium" style="max-width:100%; max-height:110%; border-radius: 10%;">
@@ -243,7 +247,7 @@
               </div>
               <br> <br>
             </li> -->
-
+ 
           </ul>
         </section> 
       </div>
