adding cosyne 2022 resources

--- a/blog.html
+++ b/blog.html
@@ -118,6 +118,46 @@
           <hr style="width:90%; height:4px; margin-left:32px;">
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
+            <!-- <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="/assets/img/blog_imgs/cosyne_2022/cosyne_2022_header.jpg" alt="Sabera Talukder Cosyne 2022 Review Biology Neuroscience" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank" alight="left" style="color:black;"><b>Trends in Computational Neuroscience: Cosyne 2022 </b></a><a style="font-size:16px;">| March 2022</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF2C00; border-color:#FF2C00;"><b style="color:white;">AI</b></button>
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br> ...
+                  
+                </div>
+              </div>
+              <br> <br>
+            </li> -->
+
+            <li>
+              <div class="row">
+                <div class="col-sm-3 text-left"> 
+                  <img src="/assets/img/blog_imgs/cosyne_2022_resources/cosyne_2022_resources.jpg" style="max-width:100%; max-height:100%; border-radius: 10%;">
+                </div>
+
+                <div class="col-sm-8 text-right" style="font-size:18px; margin-left: 10px;">
+                  <h4><a href="cosyne_2022_computational_and_systems_neuroscience_resources.html" target="_blank" alight="left" style="color:black;"><b>Cosyne 2022 Resources </b></a><a style="font-size:16px;">| March 2022</a></h4>
+                  <div class="text-left">
+                    <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
+                    <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
+                  </div>
+                  <br>
+                  What a whirlwind! Cosyne 2022 was the first in person Cosyne since 2020; meaning that we had 2 years 😱 of science to catch up on! And people did not miss this...
+                  
+                </div>
+              </div>
+              <br> <br>
+            </li>
+
             <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
