--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -151,7 +151,7 @@
         </ol>
 
         <br>
-        &emsp; If you make it to the end of this post there is a Cosyne 2022 fun fact that most of you likely don't know, and that I guarantee your scientist mind will enjoy 🤓 Thanks for sticking around to the end of the introduction - happy learning!
+        &emsp; If you make it to the end of this post there is a Cosyne 2022 fun fact that most of you likely don't know, and that I guarantee your scientist mind will enjoy 🤓 Thanks for sticking around - happy learning!
 
         <br><br>
         <hr style="width:90%; height:4px;">
