--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -404,7 +404,7 @@
           <br><br>
           &emsp; In brief, he used a 20GB 😯 NLP model trained on pubmed to find the 3 most similar posters. He ran the model with 35 different initializations to find stable groupings of three posters. Then each poster was given the same poster board number at session 1, 2, or 3! Panos did a great job of creating a spatio-temporal poster experience that I bet rivals most conferece poster session organizations! 
           <br><br>
-          &emsp; Thanks so much for making it to the end of this post! I hope the content as well as the fun fact helped you immerse yourself into computational neuroscince and Cosyne 2022! If you enjoyed this post, please check out its companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. In that post I will share my opinions on where we stand as a field!
+          &emsp; Thanks so much for making it to the end of this post! I hope the content as well as the fun fact helped you immerse yourself into computational neuroscience and Cosyne 2022! If you enjoyed this post, please check out its companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. In that post I will share my opinions on where we stand as a field!
           <br><br>
           <hr style="width:90%; height:4px;">
           <br>
