updating twitter card

--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -18,7 +18,7 @@
     <meta name="twitter:creator" content="@SaberaTalukder">
     <meta name="twitter:title" content="Cosyne 2022 Resources">
     <meta name="twitter:description" content="...">
-    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/.../...">
+    <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/cosyne_2022_resources/cosyne_2022_resources.jpg">
 
 
   <meta charset="utf-8">
