updating twitter card

--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -17,7 +17,7 @@
     <meta name="twitter:site" content="@SaberaTalukder">
     <meta name="twitter:creator" content="@SaberaTalukder">
     <meta name="twitter:title" content="Cosyne 2022 Resources">
-    <meta name="twitter:description" content="...">
+    <meta name="twitter:description" content="What a whirlwind! Cosyne 2022 was the first in person Cosyne since 2020; meaning that we had 2 years 😱 of science to catch up on! And people did not miss this...">
     <meta name="twitter:image" content="https://saberatalukder.com/assets/img/blog_imgs/cosyne_2022_resources/cosyne_2022_resources.jpg">
 
 
