--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -124,9 +124,9 @@
 
         &emsp; What a whirlwind! Cosyne 2022 was the first in person Cosyne since 2020; meaning that we had 2 years 😱 of science to catch up on! And people did not miss this opportunity to bring their science A-game 🤓 There was so much information, that even those of us who attended were likely unable to see everything we wanted to! With that, let me explain what this blog post aims to do, and who this blog post is for.
         <br><br>
-        &emsp; <i><b>A brief aside:</b></i> this blog post is <b><u>NOT</u></b> the trends that were observed at Cosyne. If you are looking for that go to the companion post <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. 
+        &emsp; <i><b>A brief aside:</b></i> this blog post is <b><u>NOT</u></b> the trends that were observed at Cosyne. If you are looking for that go to the companion post: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. 
         <br><br>
-        &emsp; <i><b>Blog post aims:</b></i> This blog post is a collection of all the fabulous resources that were generated and discussed during the conference. It is a quick and easy way to go back and catch what you missed, or if you didn't attend to still take part in Cosyne 2022! I hope this post also makes computational neuroscience more accesible for all.
+        &emsp; <i><b>Blog post aims:</b></i> This blog post is a collection of all the fabulous resources that were generated and discussed during the conference. It is a quick and easy way to go back and catch what you missed, or if you didn't attend to still take part in Cosyne 2022! I hope this post makes computational neuroscience more accesible for all.
         <br><br>
         &emsp; <i><b>Who is this blog post for?</b></i> This blog post is for anyone and everyone who wants to learn more about computational neuroscience! This includes (1) people that came to Cosyne and (2) those that couldn't make it; pretty all encompasing I hope 😅
         <br><br>
@@ -136,12 +136,12 @@
         <ol>
           <li><u><b>Read the session and talk titles below.</b></u>
             <br>
-            &emsp; This will give you the gist of topics at Cosyne 2022. There is an important reason why I wanted to only see the talk titles without authors, schools, etc. in one place. If you want to know why and more importantly be challenged visit the companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>.
+            &emsp; This will give you the gist of topics at Cosyne 2022. There is an important reason why I wanted to only see the talk titles without authors, institutions, etc. in one place. If you want to know why and more importantly be challenged visit the companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>.
           </li>
           <br>
           <li><u><b>Click on the "Live-Thread".</b></u>
           <br>
-            &emsp; This will give you a little bit more depth because it includes (1) the talk and discussion highlights and (2) the key slides from each of the talks as I was listening live!
+            &emsp; This will give you a little bit more depth because it includes (1) the talk and discussion highlights and (2) the key slides from each of the talks as I was listening live! Hopefully you'll get a real feel for the science without having to listen to the whole talk!
           </li>
           <br>
           <li><u><b>Click on the "Recording".</b></u>
@@ -404,7 +404,7 @@
           <br><br>
           &emsp; In brief, he used a 20GB 😯 NLP model trained on pubmed to find the 3 most similar posters. He ran the model with 35 different initializations to find stable groupings of three posters. Then each poster was given the same poster board number at session 1, 2, or 3! Panos did a great job of creating a spatio-temporal poster experience that I bet rivals most conferece poster session organizations! 
           <br><br>
-          &emsp; Thanks so much for making it to the end of this post! I hope the content as well as the fun fact helped you immerse yourself into computational neuroscience and Cosyne 2022! If you enjoyed this post, please check out its companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. In that post I will share my opinions on where we stand as a field!
+          &emsp; Thanks so much for making it to the end of this post! I hope the content as well as the fun fact helped you immerse yourself into Cosyne 2022 and computational neuroscience! If you enjoyed this post, please check out its companion piece: <a href="cosyne_2022_computational_and_systems_neuroscience_in_review.html" target="_blank">Trends in Computational Neuroscience: Cosyne 2022</a>. In that post I will share my opinions on where we stand as a field and more importantly where we are going!
           <br><br>
           <hr style="width:90%; height:4px;">
           <br>
