--- a/cosyne_2022_computational_and_systems_neuroscience_resources.html
+++ b/cosyne_2022_computational_and_systems_neuroscience_resources.html
@@ -158,6 +158,12 @@
         <br>
 
         <h3><b>Thursday 3/17</b></h3>
+
+          &emsp; <b><i>Tutorial -</i> Spiking Neural Networks</b>
+          <br>
+          &emsp; | <a href="https://www.youtube.com/watch?v=GTXTQ_sOxak&list=PL09WqqDbQWHGJd7Il3yVxiBts5nRSxvJ4&index=2&ab_channel=NeuralReckoning" target="_blank">Recording 1</a> | <a href="https://www.youtube.com/watch?v=rfck_p0JrIc&list=PL09WqqDbQWHGJd7Il3yVxiBts5nRSxvJ4&index=3" target="_blank">Recording 2</a> | <a href="https://github.com/neural-reckoning/cosyne-tutorial-2022" target="_blank">Github </a>| <a href="https://neural-reckoning.github.io/cosyne-tutorial-2022/" target="_blank">Website</a> |
+          <br><br>
+
           &emsp; <b><i>Session 1 -</i> Behavior and the Brain</b>
           <br>
           &emsp; | <a href="https://twitter.com/SaberaTalukder/status/1504527663670734853" target="_blank">Live-Thread</a> | <a href="https://www.youtube.com/watch?v=auVifWwQaG8&ab_channel=CosyneTalks" target="_blank">Recording</a> | 
