pushing the cosyne 2022 in review blog post

--- a/blog.html
+++ b/blog.html
@@ -118,7 +118,7 @@
           <hr style="width:90%; height:4px; margin-left:32px;">
           <br>
           <ul style="list-style-type:none; margin-top: 20px;">
-            <!-- <li>
+            <li>
               <div class="row">
                 <div class="col-sm-3 text-left"> 
                   <img src="/assets/img/blog_imgs/cosyne_2022/cosyne_2022_header.jpg" alt="Sabera Talukder Cosyne 2022 Review Biology Neuroscience" style="max-width:100%; max-height:100%; border-radius: 10%;">
@@ -131,12 +131,13 @@
                     <button type="button" class="btn" style="font-size:18px; font:bold; background-color:#00b9ff; border-color:#00b9ff;"><b style="color:white;">Neuroscience</b></button>
                     <button type="button" class="btn" style="font-size:18px;font:bold; background-color:#FF8500; border-color:#FF8500;"><b style="color:white;">Neuroengineering</b></button>
                   </div>
-                  <br> ...
+                  <br>
+                  In Cosyne 2022's keynote talk Robert Datta said that since he got tenure 🎉 he could engage in some wild speculation. This is a great rule to have! That being said, I most certainly do not have tenure, but I'm still going to take a swing 😃...
                   
                 </div>
               </div>
               <br> <br>
-            </li> -->
+            </li>
 
             <li>
               <div class="row">
